--- a/CaseStudy.Rmd
+++ b/CaseStudy.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = F)
 knitr::opts_chunk$set(fig.width = 10)
 ```
 
-```{r libraries, include = F, warning = F}
+```{r libraries, include = F, warning = F, message = F}
 library(tidyverse)
 library(magrittr)
 library(zoo)
@@ -35,7 +35,7 @@ if ("chunheisiu" %in% curr_wd) {
 }
 
 ## Read the data
-data <- read.csv("Air_Traffic_Passenger_Statistics.csv")
+data <- read_csv("Air_Traffic_Passenger_Statistics.csv")
 ```
 
 ## Part 1: Executive Summary
@@ -50,6 +50,10 @@ data <- read.csv("Air_Traffic_Passenger_Statistics.csv")
 # Rename the column names
 names(data) <- c("date", "operAirline", "operCode", "airline", "code", "isDomestic",
                  "region", "type", "category", "terminal", "area", "pax")
+
+# Drop operating airline and code columns since they are insignificant
+data %<>%
+  select(-c(operAirline, operCode))
 
 # Convert isDomestic to boolean
 data$isDomestic %<>% recode("Domestic" = T, "International" = F)
@@ -94,32 +98,25 @@ data$airline %<>% recode("United Airlines - Pre 07/01/2013" = "United Airlines")
 ## Remove the strip of "Emirates "
 data$airline %<>% recode("Emirates " = "Emirates")
 
-## Some airlines were wrongly identify in category, convert the below airlines to full service
-data[which(data$airline=="Air China"|
-          data$airline== "Air India Limited"|
-          data$airline=="Air New Zealand"|
-          data$airline=="Air Pacific Limited dba Fiji Airways"|
-          data$airline=="Emirates"| data$airline=="United Airlines" |
-          data$airline=="Virgin America" | data$airline == "Volaris Airlines" |
-          data$airline=="Delta Air Lines" | data$airline=="US Airways"),"category"]<-"Full Service"
-## Convert the below airlines to low cost carrier
-data[which(data$airline=="XL Airways France" | 
-             data$airline=="WOW Air"|
-             data$airline=="WestJet Airlines"),"category"] <- "Low Fare"
+## Some airlines were wrongly identified in category
+## Convert the below airlines to full service/Low Fare
+full_svc_airline <- c("Air China", "Air India Limited", "Air New Zealand", "Air Pacific Limited dba Fiji Airways",
+                      "Emirates", "United Airlines", "Virgin America", "Volaris Airlines", "Delta Air Lines",
+                      "US Airways")
+
+lcc_svc_airline <- c("XL Airways France", "WOW Air", "WestJet Airlines")
+
+data %<>%
+  mutate(cat_temp = ifelse(airline %in% full_svc_airline, "Full Service", 
+                    ifelse(airline %in% lcc_svc_airline, "Low Fare", as.character(category)))) %>% 
+  mutate(category = as.factor(cat_temp))
 ```
 
-```{r data_explore_cleanup, eval = F}
-## For data cleaning, some airline identify wrongly in category
-Non_lcc_list <- data %>% filter(category=="Low Fare") %>% count(airline)
-data %>% filter(category=="Low Fare" & airline=="Air China")
-data %>% filter(airline=="Swissport USA")
-airline_count <- data %>% count(airline)
-pax_count <- data %>% filter(year==2017) %>% group_by(airline) %>% summarise(pax_total = sum(pax))
-```
 
 ### I. Overview
 
 ```{r global_theme}
+million <- 1000000
 format_title <- theme(plot.title = element_text(hjust = 0.5, size = 16, face = "bold"))
 format_legend_title <- theme(legend.title = element_text(face = "bold"))
 ```
@@ -130,7 +127,7 @@ format_legend_title <- theme(legend.title = element_text(face = "bold"))
 ```{r annual_pax_trend}
 data %>% 
   ggplot() +
-  geom_bar(aes(x = year, y = pax / 1000000, fill = month), stat = "identity") +
+  geom_bar(aes(x = year, y = pax / million, fill = month), stat = "identity") +
   theme_minimal() +
   scale_x_continuous(name = "Year", breaks = seq(2006, 2017, by = 1)) +
   scale_y_continuous(name = "Passengers (Millions)") +
@@ -339,37 +336,63 @@ world %>%
 ### III. Airline Overview
 
 ```{r top5_domestic_list}
+# Filter the top 5 airlines by domestic passenger count
 top5_domestic_list <- data %>%
   filter(isDomestic) %>%
-  group_by(code) %>%
-  summarise(local_pax = sum(pax)) %>%
-  top_n(5, local_pax) %>%
-  arrange(desc(local_pax))
+  group_by(airline) %>%
+  summarise(total_pax = sum(pax)) %>%
+  top_n(5, total_pax) %>%
+  arrange(total_pax) %>% 
+  select(-total_pax)
+
+other_dom_airline <- data %>% 
+  filter(!(airline %in% top5_domestic_list$airline)) %>% 
+  group_by(year) %>% 
+  summarise(sum = sum(pax)) %>% 
+  mutate(airline = "Other Airlines") %>% 
+  select(airline, year, sum)
 ```
 
 ```{r top5_domestic_area}
 transparent <- 0.9
 
 data %>%
-  filter(isDomestic) %>%
-  group_by(year) %>% 
-  summarise(domestic_pax = sum(pax) / 1000000,
-            domestic_ua = sum(ifelse(code == "UA", pax, 0) / 1000000),
-            domestic_aa = sum(ifelse(code == "AA", pax, 0) / 1000000),
-            domestic_dl = sum(ifelse(code == "DL", pax, 0) / 1000000),
-            domestic_vx = sum(ifelse(code == "VX", pax, 0) / 1000000),
-            domestic_wn = sum(ifelse(code == "WN", pax, 0) / 1000000)
-            ) %>% 
-  ggplot(aes(x = year)) +
-  geom_area(aes(y = domestic_pax, fill = "domestic_pax"), alpha=transparent) + 
-  geom_area(aes(y = domestic_wn + domestic_vx+domestic_dl+domestic_aa+domestic_ua,fill="domestic_wn+domestic_vx+domestic_dl+domestic_aa+domestic_ua"),alpha=transparent) + 
-  geom_area(aes(y=domestic_vx+domestic_dl+domestic_aa+domestic_ua,fill="domestic_vx+domestic_dl+domestic_aa+domestic_ua"),alpha=transparent) +
-  geom_area(aes(y=domestic_dl+domestic_aa+domestic_ua,fill="domestic_dl+domestic_aa+domestic_ua"),alpha=transparent) +
-  geom_area(aes(y=domestic_aa+domestic_ua,fill="domestic_aa+domestic_ua"),alpha=transparent) +
-  geom_area(aes(y=domestic_ua,fill="domestic_ua"),alpha=transparent) +
-  scale_fill_discrete(name = "Airline",label=c("American Airlines","Delta Airlines","Other Airlines","United Airlines","Virgin America","Southwest Airlines")) + scale_x_continuous(name = "Year", breaks = seq(2006, 2017, by = 1)) + 
-  scale_y_continuous(name= "Passengers (Millions)", labels = comma) + theme_minimal() +
-  ggtitle("Passengers Count by Airlines") + theme(plot.title = element_text(hjust = 0.5)) 
+  group_by(airline, year) %>% 
+  summarize(sum = sum(pax)) %>% 
+  right_join(top5_domestic_list, by = "airline") %>%
+  ungroup() %>% 
+  rbind(other_dom_airline) %>%
+  mutate(airline = factor(airline, levels = rbind(top5_domestic_list, "Other Airlines")$airline)) %>% 
+  ggplot() +
+  geom_area(aes(x = year, y = sum / million, fill = airline), alpha = 0.75) +
+  scale_x_continuous(name = "Year", breaks = seq(2006, 2017, by = 1)) +
+  scale_y_continuous(name= "Passengers (Millions)") +
+  scale_fill_brewer(palette = "Set2") +
+  theme_minimal() +
+  ggtitle("Passengers Count by Airlines") +
+  format_title
+
+
+# data %>%
+#   filter(isDomestic) %>%
+#   group_by(year) %>% 
+#   summarise(domestic_pax = sum(pax) / 1000000,
+#             domestic_ua = sum(ifelse(code == "UA", pax, 0) / 1000000),
+#             domestic_aa = sum(ifelse(code == "AA", pax, 0) / 1000000),
+#             domestic_dl = sum(ifelse(code == "DL", pax, 0) / 1000000),
+#             domestic_vx = sum(ifelse(code == "VX", pax, 0) / 1000000),
+#             domestic_wn = sum(ifelse(code == "WN", pax, 0) / 1000000)
+#             ) %>% 
+#   ggplot(aes(x = year)) +
+#   geom_area(aes(y = domestic_pax, fill = "domestic_pax"), alpha=transparent) + 
+#   geom_area(aes(y = domestic_wn + domestic_vx+domestic_dl+domestic_aa+domestic_ua,fill="domestic_wn+domestic_vx+domestic_dl+domestic_aa+domestic_ua"),alpha=transparent) + 
+#   geom_area(aes(y=domestic_vx+domestic_dl+domestic_aa+domestic_ua,fill="domestic_vx+domestic_dl+domestic_aa+domestic_ua"),alpha=transparent) +
+#   geom_area(aes(y=domestic_dl+domestic_aa+domestic_ua,fill="domestic_dl+domestic_aa+domestic_ua"),alpha=transparent) +
+#   geom_area(aes(y=domestic_aa+domestic_ua,fill="domestic_aa+domestic_ua"),alpha=transparent) +
+#   geom_area(aes(y=domestic_ua,fill="domestic_ua"),alpha=transparent) +
+#   scale_fill_discrete(name = "Airline",label=c("American Airlines","Delta Airlines","Other Airlines","United Airlines","Virgin America","Southwest Airlines")) + scale_x_continuous(name = "Year", breaks = seq(2006, 2017, by = 1)) + 
+#   scale_y_continuous(name= "Passengers (Millions)", labels = comma) + theme_minimal() +
+#   ggtitle("Passengers Count by Airlines") + theme(plot.title = element_text(hjust = 0.5)) 
   
 ```
 
